<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="@dimen/activity_horizontal_margin">
    <TextView
        android:id="@+id/AddLab"
        android:text="@string/add_new_item"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        />

    <EditText
        android:id="@+id/engWordEdiTxt"
        android:hint="@string/input_english"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/AddLab"/>

    <EditText
        android:id="@+id/rusWordEdiTxt"
        android:hint="@string/input_translation"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/engWordEdiTxt"
       />
    <LinearLayout
        android:id="@+id/BtnAddClearLinearLayout"
        android:layout_width="wrap_content"
        android:layout_height="@dimen/btns_layout"
        android:orientation="horizontal"
        android:weightSum="2"
        android:layout_alignParentRight="true"

        android:layout_below="@+id/rusWordEdiTxt" >

        <Button
            android:id="@+id/btnAddItem"
            android:text="@string/btn_add"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"

            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

        <Button
            android:id="@+id/btnClear"
            android:text="@string/clear_edit_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:layout_toRightOf="@id/btnAddItem"
            style="@style/Widget.AppCompat.Button.Borderless.Colored"/>

    </LinearLayout>

</RelativeLayout>